<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seasalt"
        tools:context=".NumberPadFragment">

        <Button
            android:id="@+id/buttonPi"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/pi"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSquareRoot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonSquareRoot"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/squareRoot"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonPi"
            app:layout_constraintEnd_toStartOf="@+id/buttonClear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonPi"
            app:layout_constraintTop_toTopOf="@+id/buttonPi" />

        <Button
            android:id="@+id/buttonClear"
            style="@style/scientificClearButton"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSquareRoot"
            app:layout_constraintEnd_toStartOf="@+id/buttonBracketOpen"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSquareRoot"
            app:layout_constraintTop_toTopOf="@+id/buttonSquareRoot" />

        <Button
            android:id="@+id/buttonBracketOpen"
            style="@style/scientificButton"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/bracketOpen"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
            app:layout_constraintEnd_toStartOf="@+id/buttonBracketClose"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonClear"
            app:layout_constraintTop_toTopOf="@+id/buttonClear" />

        <Button
            android:id="@+id/buttonBracketClose"
            style="@style/scientificButton"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/bracketClose"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBracketOpen"
            app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonBracketOpen"
            app:layout_constraintTop_toTopOf="@+id/buttonBracketOpen" />

        <Button
            android:id="@+id/buttonDivide"
            style="@style/scientificOperator"
            android:width="60dp"
            android:height="60dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:includeFontPadding="false"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBracketClose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonBracketClose"
            app:layout_constraintTop_toTopOf="@+id/buttonBracketClose" />

        <Button
            android:id="@+id/buttonEuler"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euler"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSqure"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPi" />

        <Button
            android:id="@+id/buttonSqure"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonEuler"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonEuler"
            app:layout_constraintTop_toTopOf="@+id/buttonEuler" />

        <Button
            android:id="@+id/button7"
            style="@style/scientificButton"
            android:text="@string/n7"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSqure"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSqure"
            app:layout_constraintTop_toTopOf="@+id/buttonSqure" />

        <Button
            android:id="@+id/button8"
            style="@style/scientificButton"
            android:text="@string/n8"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <Button
            android:id="@+id/button9"
            style="@style/scientificButton"
            android:text="@string/n9"
            app:layout_constraintBottom_toBottomOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toTopOf="@+id/button8" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/scientificOperator"
            android:includeFontPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toBottomOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toTopOf="@+id/button9" />

        <Button
            android:id="@+id/buttonSin"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonCube"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEuler" />

        <Button
            android:id="@+id/buttonCube"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cube"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSin"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSin"
            app:layout_constraintTop_toTopOf="@+id/buttonSin" />

        <Button
            android:id="@+id/button4"
            style="@style/scientificButton"
            android:text="@string/n4"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCube"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCube"
            app:layout_constraintTop_toTopOf="@+id/buttonCube" />

        <Button
            android:id="@+id/button5"
            style="@style/scientificButton"
            android:text="@string/n5"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            style="@style/scientificButton"
            android:text="@string/n6"
            app:layout_constraintBottom_toBottomOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button5" />

        <Button
            android:id="@+id/buttonSubtract"
            style="@style/scientificOperator"
            android:includeFontPadding="false"
            android:text="@string/subtract"
            app:layout_constraintBottom_toBottomOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="@+id/button6" />

        <Button
            android:id="@+id/buttonCos"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cos"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonAbs"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSin" />

        <Button
            android:id="@+id/buttonAbs"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absoluteValue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCos"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCos"
            app:layout_constraintTop_toTopOf="@+id/buttonCos" />

        <Button
            android:id="@+id/button1"
            style="@style/scientificButton"
            android:text="@string/n1"
            app:layout_constraintBottom_toBottomOf="@+id/buttonAbs"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonAbs"
            app:layout_constraintTop_toTopOf="@+id/buttonAbs" />

        <Button
            android:id="@+id/button2"
            style="@style/scientificButton"
            android:text="@string/n2"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="@+id/button1" />

        <Button
            android:id="@+id/button3"
            style="@style/scientificButton"
            android:text="@string/n3"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/scientificOperator"
            android:includeFontPadding="false"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3" />

        <Button
            android:id="@+id/buttonTan"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tan"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonFactorial"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCos" />

        <Button
            android:id="@+id/buttonFactorial"
            style="@style/scientificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factorial"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonTan"
            app:layout_constraintEnd_toStartOf="@+id/buttonSign"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonTan"
            app:layout_constraintTop_toTopOf="@+id/buttonTan" />

        <Button
            android:id="@+id/buttonSign"
            style="@style/scientificButton"
            android:text="@string/sign"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonFactorial"
            app:layout_constraintEnd_toStartOf="@+id/button0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonFactorial"
            app:layout_constraintTop_toTopOf="@+id/buttonFactorial" />

        <Button
            android:id="@+id/button0"
            style="@style/scientificButton"
            android:text="@string/n0"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSign"
            app:layout_constraintEnd_toStartOf="@+id/buttonDecimal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSign"
            app:layout_constraintTop_toTopOf="@+id/buttonSign" />

        <Button
            android:id="@+id/buttonDecimal"
            style="@style/scientificButton"
            android:text="@string/decimal"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toTopOf="@+id/button0" />

        <Button
            android:id="@+id/buttonEqual"
            style="@style/scientificEquals"
            android:includeFontPadding="false"
            android:text="@string/equals"
            app:layout_constraintBottom_toBottomOf="@+id/buttonDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDecimal"
            app:layout_constraintTop_toTopOf="@+id/buttonDecimal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>